AUTOMAKE_OPTIONS = foreign


EX2D_CXXFLAGS = -I$(top_srcdir)/include \
				-I$(top_srcdir)/include/front \
				-I$(top_srcdir)/include/intfc \
				-I$(top_srcdir)/include/util \
				@HDF_FLAGS@

EX2D_LDADD = -L$(top_srcdir)/lib -lfront -lintfc -lutil @HDF_LIBS@

noinst_PROGRAMS = example00 \
				  example01 \
				  example02 \
				  example03 \
				  example04 \
				  example05 \
				  example06 \
				  example07 \
				  example08 \
				  example09 \
				  example10 \
				  example11 \
				  example12 \
				  example13 \
				  example14

example00_SOURCES = example00.cpp
example00_CXXFLAGS = $(EX2D_CXXFLAGS)
example00_LDADD = $(EX2D_LDADD)

example01_SOURCES = example01.cpp
example01_CXXFLAGS = $(EX2D_CXXFLAGS)
example01_LDADD = $(EX2D_LDADD)

example02_SOURCES = example02.cpp
example02_CXXFLAGS = $(EX2D_CXXFLAGS)
example02_LDADD = $(EX2D_LDADD)

example03_SOURCES = example03.cpp
example03_CXXFLAGS = $(EX2D_CXXFLAGS)
example03_LDADD = $(EX2D_LDADD)

example04_SOURCES = example04.cpp
example04_CXXFLAGS = $(EX2D_CXXFLAGS)
example04_LDADD = $(EX2D_LDADD)

example05_SOURCES = example05.cpp
example05_CXXFLAGS = $(EX2D_CXXFLAGS)
example05_LDADD = $(EX2D_LDADD)

example06_SOURCES = example06.cpp
example06_CXXFLAGS = $(EX2D_CXXFLAGS)
example06_LDADD = $(EX2D_LDADD)

example07_SOURCES = example07.cpp
example07_CXXFLAGS = $(EX2D_CXXFLAGS)
example07_LDADD = $(EX2D_LDADD)

example08_SOURCES = example08.cpp
example08_CXXFLAGS = $(EX2D_CXXFLAGS)
example08_LDADD = $(EX2D_LDADD)

example09_SOURCES = example09.cpp
example09_CXXFLAGS = $(EX2D_CXXFLAGS)
example09_LDADD = $(EX2D_LDADD)

example10_SOURCES = example10.cpp
example10_CXXFLAGS = $(EX2D_CXXFLAGS)
example10_LDADD = $(EX2D_LDADD)

example11_SOURCES = example11.cpp
example11_CXXFLAGS = $(EX2D_CXXFLAGS)
example11_LDADD = $(EX2D_LDADD)

example12_SOURCES = example12.cpp
example12_CXXFLAGS = $(EX2D_CXXFLAGS)
example12_LDADD = $(EX2D_LDADD)

example13_SOURCES = example13.cpp
example13_CXXFLAGS = $(EX2D_CXXFLAGS)
example13_LDADD = $(EX2D_LDADD)

example14_SOURCES = example14.cpp
example14_CXXFLAGS = $(EX2D_CXXFLAGS)
example14_LDADD = $(EX2D_LDADD)


