AUTOMAKE_OPTIONS = foreign

AM_CPPFLAGS = -I../src/util

noinst_LIBRARIES = libutil.a

libutil_a_SOURCES = ../src/util/cdecs.h ../src/util/cleanup.c ../src/util/debug.c ../src/util/error.c ../src/util/fft.c ../src/util/fgetstrin.c ../src/util/fnamedebug.h ../src/util/fsort.c ../src/util/machine.c ../src/util/matrix.c ../src/util/navdecs.h ../src/util/other.c ../src/util/output.c ../src/util/plotdecs.h ../src/util/ppsub.c ../src/util/quad.c ../src/util/random.c ../src/util/roots.c ../src/util/runga.c ../src/util/screen.c ../src/util/sigplot.c ../src/util/simpleio.c ../src/util/sphhar.c ../src/util/times.c ../src/util/uapi.h ../src/util/uinit.c ../src/util/umap.c ../src/util/uprotos.h ../src/util/vectormalloc.c ../src/util/vmalloc.h ../src/util/vtk.c
