AUTOMAKE_OPTIONS = foreign

AM_CPPFLAGS = -I../include/util

noinst_LIBRARIES = libutil.a

libutil_a_SOURCES = ../src/util/cleanup.c ../src/util/debug.c ../src/util/error.c ../src/util/fft.c ../src/util/fgetstrin.c ../src/util/fsort.c ../src/util/machine.c ../src/util/matrix.c ../src/util/other.c ../src/util/output.c ../src/util/ppsub.c ../src/util/quad.c ../src/util/random.c ../src/util/roots.c ../src/util/runga.c ../src/util/screen.c ../src/util/sigplot.c ../src/util/simpleio.c ../src/util/sphhar.c ../src/util/times.c ../src/util/uinit.c ../src/util/umap.c ../src/util/vectormalloc.c ../src/util/vtk.c ../include/util/cdecs.h ../include/util/fnamedebug.h ../include/util/navdecs.h ../include/util/plotdecs.h ../include/util/uapi.h ../include/util/uprotos.h ../include/util/vmalloc.h

